@@ -17,7 +17,7 @@
 AC_PREREQ(2.60)
 AC_INIT
 
-AC_DEFUN(AC_CONFIG_SRCDIR)
+AC_DEFUN([AC_CONFIG_SRCDIR])
 #AC_DEFUN(AC_CONFIG_FILES)
 
 # Checks for programs.
