@@ -1,3 +1,11 @@
+2010-09-06 Raphael Neider <rneider AT web.de>
+
+	* configure.in, debugger/mcs51/configure.in,
+	  device/lib/pic/configure.in, device/lib/pic16/configure.ac,
+	  sim/ucsim/configure.in, sim/ucsim/custom.h,
+	  sim/ucsim/ddconfig_in.h, support/packihx/configure.in:
+	  updated build system to allow autoreconf -fi to set up the project
+
 2010-09-04 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* device/include/mcs51/AT89C513xA.h: new, added, thanks Anirban Brahmachari
